# jarvis

./: CLAUDE.md  README.md  example.env  langgraph.json  pyproject.toml
.claude/skills/skill-creator/: SKILL.md
.claude/skills/skill-creator/scripts/: init_skill.py
src/: config.py
src/agents/: deepagent.py  subagents.py
src/middleware/: __init__.py  image_content.py
src/prompts/: general.md  local-research.md  local-search.md  web-seach.md
src/skills/general/deep-research/: SKILL.md
src/skills/general/local-research/: SKILL.md
src/skills/general/local-search/: SKILL.md
src/skills/general/md-to-docx/: SKILL.md
src/skills/general/md-to-docx/scripts/: convert.py
src/skills/general/md-to-pdf/: SKILL.md
src/skills/general/md-to-pdf/scripts/: convert.py
src/skills/general/pdf-to-md/scripts/: mistral_ocr.py
src/skills/general/web-search/: SKILL.md
src/skills/local/any-to-md/: SKILL.md
src/skills/local/any-to-md/scripts/: mistral_ocr.py
src/tools/: view_image.py
src/utils/: __init__.py  workspace.py
